2001-04-20  Alexander Larsson  <alexl@redhat.com>

	* gtk/gtkcolorsel.[ch]:
	API Change. Take GdkColor arguments instead of gdouble *.
	Leave the old gtk_color_selection_set_color for compatibility,
	but marked deprecated.
	Do correct rounding when converting RGB <-> HSV.
	
	* gtk/gtkcolorseldialog.c:
	* tests/testgtk.c:
	Use new GtkColorSelection API.

	* gtk/gtkhsv.c:
	Fix problem selecting colors in triangle when Hue is 330.
	Fix some black dots around the HSB triangle.
	
	* gtk/gtkfilesel.c:
	return FALSE from the focus_in_event handler to fix focus problems.

2001-04-18  Havoc Pennington  <hp@redhat.com>

	* gtk/gtkwindow.c (gtk_window_class_init): add signals and binding
	set, so keybindings are configurable	
	(gtk_window_activate_default): Change to activate the focus widget
	instead if there's a focus widget, to be consistent with the
	behavior that previously existed in key_press_event

2001-04-18  Havoc Pennington  <hp@redhat.com>

	* gdk/gdkkeyuni.c: Handle numeric keypad keysyms; bug #50201

2001-04-18  Havoc Pennington  <hp@redhat.com>

        Close bug #50615:
	
	* gtk/gtkstyle.c (gtk_default_draw_layout): Use text_gc to draw
	the layout

	* gtk/gtktext.c: Use base/text instead of bg/fg throughout

	* gtk/gtkentry.c: Use base/text instead of bg/fg throughout

	* gtk/gtktextdisplay.c: Use base/text instead of bg/fg throughout
	
	* gtk/gtkstyle.c (gtk_style_init): make GTK_STATE_SELECTED default
	to blue for base, in addition to bg
	
2001-04-18  Havoc Pennington  <hp@redhat.com>

	* tests/testgtk.c (create_image): allow shrinking the image window
	to test that we clip to allocation.

	* gtk/gtkimage.c (gtk_image_expose): clip to allocation,
	#9845

	* gtk/gtkenums.h: move GtkWrapMode in here, #50472

Wed Apr 18 14:23:14 2001  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkimage-x11.c (gdk_image_new): Try changing
	mode on shm segments to 0600. We'll see who complains.

	* gdk/gdkwindow.c (_gdk_window_destroy_hierarchy): Call