@@ -25,6 +25,10 @@
  * GTK+ at ftp://ftp.gtk.org/pub/gtk/. 
  */
 
+#include "gdkconfig.h"
+
+#ifdef GDK_WINDOWING_X11
+
 #include "gtkmain.h"
 #include "gtkplug.h"
 
@@ -714,3 +718,5 @@ gtk_plug_filter_func (GdkXEvent *gdk_xevent, GdkEvent *event, gpointer data)
 
   return GDK_FILTER_CONTINUE;
 }
+
+#endif /* GDK_WINDOWING */
